--- a/style.css
+++ b/style.css
@@ -210,7 +210,14 @@ width:100px;
     margin-top: 20px;
     font-weight: 600;
 }
-/*-----page-----*/
+@media (max-width: 768px){
+    .sub-header h1{
+    margin-top: 30px;
+    font-size: 40px;
+    
+
+}
+}
 .sub-header{
     height: 100%;
     width:100%;
@@ -221,12 +228,14 @@ width:100px;
     color: white;
     
 }
+
 .sub-header h1{
     margin-top: 30px;
     font-size: 40px;
     
 
 }
+
 .about-us{
     width: 80%;
     margin: auto;
