--- a/style.css
+++ b/style.css
@@ -143,8 +143,8 @@ width:100px;
     width:100%;
     font-weight: 500;
     color: white;
-    font-size: 26px;
-    bottom: 0;
+    font-size: 15px;
+    bottom: 20%;
     left: 50%;
     transform:translateX(-50%);
     position: absolute;
